--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Zaher Blog</h1>
+        <h1>Zaher Blog !! </h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="posts.html">Blog Posts</a>
